--- a/writer/index.html
+++ b/writer/index.html
@@ -8,6 +8,11 @@
     <link href='styles/app.css' rel='stylesheet' type='text/css'/>
     <link rel="shortcut icon"type="image/x-icon" href="writer/assets/favicon.ico">
 
+    <!-- jscrop support -->
+    <script src="cropjs/js/tracking-min.js?v=1"></script>
+    <script src="cropjs/js/cropjs.min.js?v=1"></script>
+    <link href='cropjs/css/imcrop.css' rel='stylesheet' type='text/css'/>
+
 </head>
 <body>
 
